--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
+    "micro": "^10.0.1",
     "next": "13.3.0",
     "prisma": "^4.12.0",
     "react": "18.2.0",
