--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.3.0",
     "prisma": "^4.12.0",
     "react": "18.2.0",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sass": "^1.62.1",
