--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,13 +21,12 @@
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
     "micro": "^10.0.1",
-    "next": "13.3.0",
+    "next": "^13.4.1",
     "prisma": "^4.12.0",
     "react": "18.2.0",
     "react-click-away-listener": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "sass": "^1.62.1",
     "stripe": "11.0",
     "ts-node": "^10.9.1",
     "typescript": "5.0.4",
