--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tscheck": "./node_modules/typescript/bin/tsc --noEmit"
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.2",
